@@ -1,3 +1,8 @@
+2021-08-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/ez80_z80/*.s:
+	  Fix library functions for new calling convention.
+
 2021-08-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/r2k/*.s,
